--- a/week2.html
+++ b/week2.html
@@ -6,6 +6,8 @@
     <style media="screen">
       body{
 background-color: brown;
+font-family: Arial;
+
 
       }
     </style>
@@ -31,13 +33,13 @@ background-color: brown;
 <li>snake</li>
 </ul>
 
-<h2 style="background-color: lightblue">Businesses Suited to Animal Employees</h2>
+<h2 style="background-color: lightblue; font-size: 40px">Businesses Suited to Animal Employees</h2>
 <p>Many businesses could benefit from embracing our feathered and furry friends in the workplace.</p>
-<h3 style="border: 2px solid Violet">Cafes</h3>
+<h3 style="border: 2px solid Violet" font-size: 25px>Cafes</h3>
 <p>Perhaps you've been to a cat cafe already? Relax with a coffee and be soothed by the elegant slow dance and soft purring of some feline friends</p>
-<h3 style="border: 2px solid Pink">Hospitals</h3>
+<h3 style="border: 2px solid Pink" font-size: 40px>Hospitals</h3>
 <p>Hospitals often have a need to move small things like sample tubes and paperwork to other parts of the hospital quickly, often along long narrow corridors. Parrots would be perfectly suited to this role, and would also help brighten things up, adding a little cheer for those enjoying a temporary stay.</p>
-<h3 style="border: 2px solid Purple">Window Cleaning</h3>
+<h3 style="border: 2px solid Purple" font-size: 40px>Window Cleaning</h3>
 <p>If window cleaners used Pelicans to hold their water, instead of carrying a bucket up a ladder, it's estimated that 356 window cleaning injuries a year could be avoided. They're also good company on a lunch break.</p>
 
 <!-- This is a comment and it's invisible. -->
