--- a/WEEK3/contact.html
+++ b/WEEK3/contact.html
@@ -7,12 +7,9 @@
   <body>
 <a href="week3.html">Main page</a> <a href="about.html">About</a>
 <div class="main">
-<p></p>
-  <p> </p>
-Unfortunately otters are out of reach at the moment.
-<img style='max-width: 70%' src="image\otter3.jpg" alt="otter3">
+<p>Unfortunately otters are out of reach at the moment. Try again later.</p>
+<img style='max-width: 100%' src="image\otter3.jpg" alt="otter3">
 </div>
-
 
 
 
