--- a/WEEK4/week3.html
+++ b/WEEK4/week3.html
@@ -3,38 +3,38 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+
+    <link rel="stylesheet" href="css\style.css">
   </head>
   <body>
 
 <div class="main">
-
 <h1> Otters</h1>
 <a href="about.html">About otters</a> <a href="contact.html">Contact</a>
 </div>
-<div class="1">
+
+
   <h2>Species - Otter</h2>
   <audio controls>
   <source src="audio\kickdrum.mp3" type="audio/mp3">
   <source src="audio\kickdrum.ogg" type="audio/ogg">
   <source src="audio\kickdrum.wav" type="audio/wav">
   Sorry your browser does not support the audio element </audio>
-  <p>Otters have brown fur, long slender body and small ears.</p>
-  <p>They swim very slow in the water.</p>
-  <img src="image\otter1.jpg" alt="Otter1" style="width:720px;>
-  <div class="2">
-  </div>
+  <p>Otters have brown fur, long slender body and small ears. They swim very slow in the water.</p>
+  <img src="image\otter1.jpg" alt="Otter1">
+
+
   <p></p>
-  <video width="720" height="480" controls poster = "image/video cover.jpg">
+  <video width="100%"  controls poster = "image/video cover.jpg">
     <source src="video\smoke.mov" type="video/mov">
     <source src="video\smoke.mp4" type="video/mp4">
     Your browser does not support the video tag
   </video>
-  <div class="3">
+<div>
     <h2>Origin</h2>
-    <p>They are semi-aquatic species, they can be seen in northern and western England.</p>
-    <p>They eat fish and occasionally small water birds.</p>
-    <img src="image\otter2.jpg" alt="Otter2" style="width:720px;>
-  </div>
+    <p>They are semi-aquatic species, they can be seen in northern and western England. They eat fish and occasionally small water birds.</p>
+    <img src="image\otter2.jpg" alt="Otter2">
+
 </div>
 
 <div class="main2">
