--- a/WEEK4/contact.html
+++ b/WEEK4/contact.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+        <link rel="stylesheet" href="css\style.css">
   </head>
   <body>
 <a href="week3.html">Main page</a> <a href="about.html">About</a>
-<div class="main">
+<h1>Contact otters</h1>
 <p>Unfortunately otters are out of reach at the moment. Try again later.</p>
 <img src="image\otter3.jpg" alt="otter3" >
-</div>
+
 
 
 
