--- a/WEEK4/about.html
+++ b/WEEK4/about.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+        <link rel="stylesheet" href="css\style.css">
   </head>
   <body>
 <a href="week3.html">Main page</a> <a href="contact.html">Contact</a>
