--- a/week5 asse/about.html
+++ b/week5 asse/about.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <!-- Make sure you have added the viewport meta tag for Mobile view--> 
+
+<!-- Its good to see you have used a single .css file and link it to your pages-->
+    
         <link rel="stylesheet" href="css\style.css">
   </head>
   <body>
