--- a/CW2/Gallery.html
+++ b/CW2/Gallery.html
@@ -27,7 +27,7 @@
 
 <h3>South Korea gallery</h3>
   <div class="gallery">
-    <a href="image/kr1.jpg"target="_blank"><img src="image\kr1.JPG" alt="Namsan Tower"></a> <!-- target=blank opens link in a new tab-->
+    <a href="image/kr1.jpg""target="_blank"><img src="image\kr1.JPG" alt="Namsan Tower"></a> <!-- target=blank opens link in a new tab-->
     <a href="image/kr2.jpg"target="_blank"><img src="image\kr2.JPG" alt="Electric installations"></a>
     <a href="image/kr3.jpg"target="_blank"><img src="image\kr3.JPG" alt="Gyeongbokgung Palace"></a>
     <a href="image/kr4.jpg"target="_blank"><img src="image\kr4.JPG" alt="Gyeongbokgung Palace"></a>
