--- a/CW2/Gallery.html
+++ b/CW2/Gallery.html
@@ -27,16 +27,16 @@
 
 <h3>South Korea gallery</h3>
   <div class="gallery">
-    <a href="image/kr1.jpg""target="_blank"><img src="image\kr1.JPG" alt="Namsan Tower"></a> <!-- target=blank opens link in a new tab-->
-    <a href="image/kr2.jpg"target="_blank"><img src="image\kr2.JPG" alt="Electric installations"></a>
-    <a href="image/kr3.jpg"target="_blank"><img src="image\kr3.JPG" alt="Gyeongbokgung Palace"></a>
-    <a href="image/kr4.jpg"target="_blank"><img src="image\kr4.JPG" alt="Gyeongbokgung Palace"></a>
-    <a href="image/kr5.jpg"target="_blank"><img src="image\kr5.JPG" alt="Changgyeonggung Palace Great Greenhouse"></a>
-    <a href="image/kr6.jpg"target="_blank"><img src="image\kr6.JPG" alt="Gyeongbokgung Palace 2"></a>
-    <a href="image/kr7.jpg"target="_blank"><img src="image\kr7.JPG" alt="Fountain in front of the Great Greenhouse"></a>
-    <a href="image/kr8.jpg"target="_blank"><img src="image\kr8.JPG" alt="Seoul busy street"></a>
-    <a href="image/kr9.jpg"target="_blank"><img src="image\kr9.JPG" alt="Palace park"></a>
-    <a href="image/homepage1.jpg"target="_blank"><img src="image\homepage1.JPG" alt="Gangnam district"></a>
+    <a href="image/kr1.jpg"><img src="image\kr1.JPG" alt="Namsan Tower"></a>  
+    <a href="image/kr2.jpg"><img src="image\kr2.JPG" alt="Electric installations"></a>
+    <a href="image/kr3.jpg"><img src="image\kr3.JPG" alt="Gyeongbokgung Palace"></a>
+    <a href="image/kr4.jpg"><img src="image\kr4.JPG" alt="Gyeongbokgung Palace"></a>
+    <a href="image/kr5.jpg"><img src="image\kr5.JPG" alt="Changgyeonggung Palace Great Greenhouse"></a>
+    <a href="image/kr6.jpg"><img src="image\kr6.JPG" alt="Gyeongbokgung Palace 2"></a>
+    <a href="image/kr7.jpg"><img src="image\kr7.JPG" alt="Fountain in front of the Great Greenhouse"></a>
+    <a href="image/kr8.jpg"><img src="image\kr8.JPG" alt="Seoul busy street"></a>
+    <a href="image/kr9.jpg"><img src="image\kr9.JPG" alt="Palace park"></a>
+    <a href="image/homepage1.jpg"><img src="image\homepage1.JPG" alt="Gangnam district"></a>
   </div>
 
 <footer>
