--- a/CW2/Gallery.html
+++ b/CW2/Gallery.html
@@ -27,8 +27,8 @@
 
 <h3>South Korea gallery</h3>
   <div class="gallery">
-    <a href="image/kr1.jpg"><img src="image\kr1.JPG" alt="Namsan Tower"></a>  
-    <a href="image/kr2.jpg"><img src="image\kr2.JPG" alt="Electric installations"></a>
+    <a href="image\kr1.JPG"><img src="image\kr1.JPG" alt="Namsan Tower"></a>  
+    <a href="image/kr2.JPG"><img src="image\kr2.JPG" alt="Electric installations"></a>
     <a href="image/kr3.jpg"><img src="image\kr3.JPG" alt="Gyeongbokgung Palace"></a>
     <a href="image/kr4.jpg"><img src="image\kr4.JPG" alt="Gyeongbokgung Palace"></a>
     <a href="image/kr5.jpg"><img src="image\kr5.JPG" alt="Changgyeonggung Palace Great Greenhouse"></a>
