--- a/CW2/home.html
+++ b/CW2/home.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head> <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!-- makes page to display/scale better on mobile-->
     <meta charset="utf-8">
-        <title>AAAnalog</title>  <link rel="icon" type="image/x-icon" href="image\pageicon.png"> <!--adds browser tab icon and title -->
+        <title>AAAnalog</title>  <link rel="icon" type="image/x-icon" href="image/pageicon.png"> <!--adds browser tab icon and title -->
       <link rel="stylesheet" href="css\style.css"> <!--links css style sheet-->
   </head>
 
